Revision history for Dist-Zilla-Plugin-Git-FilePermissions

{{$NEXT}}

  - Remove non-existing default directories from no_index in META.* files
  - Removed develop dependencies from META.json file
  - Removed x_authority from META.* files
  - Removed x_Dist_Zilla from META.* files
  - Removed x_BuiltWith from META.* files
  - Removed cpanfile from distribution

0.004  2018-02-11 18:47:41 UTC

  - Ignore files that don't exist or where Git thinks they are a file but
    they are something else (e.g. submodules)
  - Replaced plugin bundle Author::SKIRMESS with an inline bundle through
    a Git submodule on https://github.com/skirmess/dzil-inc

0.003  2017-10-20 23:39:10 UTC

  - Added a default option to specify default permissions

0.002  2017-10-16 21:46:46 UTC

  - Fix the tests for Windows

0.001  2017-10-15 19:39:17 UTC

  - Initial release